Closed Bug 1563538 Opened 5 years ago Closed 5 years ago

Process pending transactions to https/1 end points when a tunnel through an h2 proxy becomes idle

Categories

(Core :: Networking: HTTP, defect, P1)

defect

Tracking

()

VERIFIED FIXED
mozilla69
Tracking Status
firefox-esr68 68+ fixed
firefox68 + fixed
firefox69 --- fixed

People

(Reporter: mayhemer, Assigned: mayhemer)

References

Details

(Whiteboard: [necko-triaged][secure-proxy-mvp])

Attachments

(1 file, 1 obsolete file)

Extracted from https://bugzilla.mozilla.org/show_bug.cgi?id=1562887#c1. This is pretty much visible as a huge delay when connecting h1 secure servers and the connection can idle for a long time with the time out driven by the server (10, 15, 60 seconds...)

Assignee: nobody → honzab.moz
Status: NEW → ASSIGNED
Attachment #9076104 - Attachment is obsolete: true
Attachment #9076292 - Attachment description: Bug 1563538 - Propagate close reason through TLSFilterTransaction to allow tunnel stream reuse when possible + close the undelying tunnel stream when a tunneling connection is closed, r=dragana+kershaw → Bug 1563538 - Propagate close reason through TLSFilterTransaction to allow tunnel stream reuse when possible + close the undelying tunnel stream when a tunneling connection is closed, r=dragana+kershaw\
Attachment #9076292 - Attachment description: Bug 1563538 - Propagate close reason through TLSFilterTransaction to allow tunnel stream reuse when possible + close the undelying tunnel stream when a tunneling connection is closed, r=dragana+kershaw\ → Bug 1563538 - Propagate close reason through TLSFilterTransaction to allow tunnel stream reuse when possible + close the undelying tunnel stream when a tunneling connection is closed, r=dragana+kershaw
Pushed by honzab.moz@firemni.cz: https://hg.mozilla.org/integration/autoland/rev/a75bba7b4bbb Propagate close reason through TLSFilterTransaction to allow tunnel stream reuse when possible + close the undelying tunnel stream when a tunneling connection is closed, r=dragana,kershaw+kershaw

Comment on attachment 9076292 [details]
Bug 1563538 - Propagate close reason through TLSFilterTransaction to allow tunnel stream reuse when possible + close the undelying tunnel stream when a tunneling connection is closed, r=dragana+kershaw

Beta/Release Uplift Approval Request

  • User impact if declined: Very visible hangs or failed page loads when using h2 proxy.
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): The fix is isolated to h2 tunneling, is well understood and tested manually, and has a kill preference we may flip in case of trouble.
  • String changes made/needed:
Attachment #9076292 - Flags: approval-mozilla-release?
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla69
Blocks: 1565518
No longer blocks: 1565518

Please add set-up steps for manual testing to repro this behavior with expected results.

(In reply to Rebecca Billings [:rbillings] from comment #6)

Please add set-up steps for manual testing to repro this behavior with expected results.

See https://bugzilla.mozilla.org/show_bug.cgi?id=1563695#c12

I tested multiple tabs and browsed through all of the sites above, running videos. I was not getting any consistent lags or delays in video playback or page load. Marking as Verified.

Status: RESOLVED → VERIFIED

Comment on attachment 9076292 [details]
Bug 1563538 - Propagate close reason through TLSFilterTransaction to allow tunnel stream reuse when possible + close the undelying tunnel stream when a tunneling connection is closed, r=dragana+kershaw

fix for http2 proxies, needed by secure-proxy project. approved for 68.0.1 and 68.1esr

Attachment #9076292 - Flags: approval-mozilla-release?
Attachment #9076292 - Flags: approval-mozilla-release+
Attachment #9076292 - Flags: approval-mozilla-esr68+

Per discussion with jcristau, we're uplifting this to 68.0.1esr also to maintain parity with the non-ESR 68.0.1 release and hopefully avoid some confusion.

Depends on: 1720633
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: