Bug 1563538 - Propagate close reason through TLSFilterTransaction to allow tunnel stream reuse when possible + close the undelying tunnel stream when a tunneling connection is closed, r=dragana,kershaw+kershaw

Differential Revision: https://phabricator.services.mozilla.com/D37122